Bug 168598 - FILEOPEN DOCX Table is somewhat offset (compatibilityMode not set = 12)
Summary: FILEOPEN DOCX Table is somewhat offset (compatibilityMode not set = 12)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2025-09-29 03:10 UTC by Aron Budea
Modified: 2025-09-29 14:39 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Comparison screenshot (Word vs. Writer) (139.43 KB, image/png)
2025-09-29 03:10 UTC, Aron Budea
Details
Reference PDF exported from Word (15.64 KB, application/pdf)
2025-09-29 03:12 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-09-29 03:10:59 UTC
Created attachment 203011 [details]
Comparison screenshot (Word vs. Writer)

Open attachment 61594 [details] from bug 49890.
When looking at the table, it should be positioned so the split in the first row is exactly below the second 1 in ยง 11 above it (see the screenshot and reference PDF from Word).

However, since the following commit in 7.6, and its backport to 7.5, the table is slightly off to the right:
https://git.libreoffice.org/core/commit/788cc6ff3b186ceb8f265e53b5482f808f6536f4
author		Vasily Melenchuk <vasily.melenchuk@cib.de>	Thu Jan 05 18:17:12 2023 +0300
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Mon Jan 09 07:54:51 2023 +0000

"tdf#148578: Do not apply table shift for RTF"

Still observed in LO 26.2.0.0.alpha0+ (8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c) / Windows.

It's interesting how the commit message mentions RTF, yet this is a DOCX with compatibilityMode 12 (as it's not set in settings.xml).
Comment 1 Aron Budea 2025-09-29 03:12:13 UTC
Created attachment 203012 [details]
Reference PDF exported from Word
Comment 2 Commit Notification 2025-09-29 11:59:43 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a80d7ba9c01c8c5c95bf01960d969b82dc7edffc

tdf#168598 Fix for tdf#148578 should only apply to RTF

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-09-29 14:39:01 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/bd61271f10181fe6540264273753551779d4ac8a

tdf#168598 Fix for tdf#148578 should only apply to RTF

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.