tdf#168598 Fix for tdf#148578 should only apply to RTF

It also affected DOCX files witch compatibilityMode
not specified.

Regression from 788cc6ff3b186ceb8f265e53b5482f808f6536f4

Change-Id: I1368066800ce4e6f4caa1131b1b6cf3590d8b1c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191587
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>