sw/qa/extras/ooxmlexport/ooxmlexport20.cxx
@@ -1194,6 +1194,15 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf159110)
                 sExpectedURL);
 }
 
+DECLARE_OOXMLEXPORT_TEST(testTdf168598, "tdf168598.docx")
+{
+    uno::Reference<text::XTextTable> xTable(getParagraphOrTable(2), uno::UNO_QUERY);
+
+    // Without the fix in place this would be -302
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(-501),
+                         getProperty<sal_Int32>(xTable, "LeftMargin"));
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
